🐞 BUGFIX: Contrast issues

--- a/iUrn/tailwind.css
+++ b/iUrn/tailwind.css
@@ -68,6 +68,11 @@
   margin-right: auto
 }
 
+.mx-2 {
+  margin-left: 0.5rem;
+  margin-right: 0.5rem
+}
+
 .my-2 {
   margin-top: 0.5rem;
   margin-bottom: 0.5rem
@@ -76,11 +81,6 @@
 .my-6 {
   margin-top: 1.5rem;
   margin-bottom: 1.5rem
-}
-
-.mx-2 {
-  margin-left: 0.5rem;
-  margin-right: 0.5rem
 }
 
 .mt-12 {
@@ -95,10 +95,6 @@
   margin-top: 2rem
 }
 
-.mt-4 {
-  margin-top: 1rem
-}
-
 .ml-\[-12px\] {
   margin-left: -12px
 }
@@ -109,6 +105,10 @@
 
 .mt-\[90\%\] {
   margin-top: 90%
+}
+
+.mt-4 {
+  margin-top: 1rem
 }
 
 .mt-2 {
@@ -143,14 +143,6 @@
   margin-top: 1.5rem
 }
 
-.mt-\[80\%\] {
-  margin-top: 80%
-}
-
-.mt-10 {
-  margin-top: 2.5rem
-}
-
 .mb-6 {
   margin-bottom: 1.5rem
 }
@@ -171,16 +163,16 @@
   height: 0px
 }
 
-.h-10 {
-  height: 2.5rem
-}
-
 .h-5\/6 {
   height: 83.333333%
 }
 
 .h-36 {
   height: 9rem
+}
+
+.h-10 {
+  height: 2.5rem
 }
 
 .h-24 {
@@ -191,24 +183,12 @@
   height: 24rem
 }
 
-.h-40 {
-  height: 10rem
-}
-
-.h-20 {
-  height: 5rem
-}
-
-.h-16 {
-  height: 4rem
-}
-
 .h-12 {
   height: 3rem
 }
 
-.h-auto {
-  height: auto
+.h-16 {
+  height: 4rem
 }
 
 .w-2\/3 {
@@ -239,20 +219,16 @@
   width: 24rem
 }
 
-.w-52 {
-  width: 13rem
-}
-
 .w-5\/6 {
   width: 83.333333%
 }
 
-.w-20 {
-  width: 5rem
-}
-
 .w-16 {
   width: 4rem
+}
+
+.w-20 {
+  width: 5rem
 }
 
 .flex-1 {
@@ -299,10 +275,6 @@
   border-radius: 9999px
 }
 
-.rounded-lg {
-  border-radius: 0.5rem
-}
-
 .rounded-xl {
   border-radius: 0.75rem
 }
@@ -311,17 +283,13 @@
   border-width: 2px
 }
 
-.border-4 {
-  border-width: 4px
-}
-
 .border-b-2 {
   border-bottom-width: 2px
 }
 
 .border-light-secondary {
   --tw-border-opacity: 1;
-  border-color: rgb(0 153 255 / var(--tw-border-opacity))
+  border-color: rgb(10 115 235 / var(--tw-border-opacity))
 }
 
 .border-black {
@@ -341,7 +309,7 @@
 
 .bg-light-secondary {
   --tw-bg-opacity: 1;
-  background-color: rgb(0 153 255 / var(--tw-bg-opacity))
+  background-color: rgb(10 115 235 / var(--tw-bg-opacity))
 }
 
 .bg-gray-200 {
@@ -374,11 +342,6 @@
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem
-}
-
-.text-3xl {
-  font-size: 1.875rem;
-  line-height: 2.25rem
 }
 
 .text-2xl {
